--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ ansi-to-tui = "7.0.0"
 crossterm = "0.27.0"
 ratatui = { version = "0.29.0", features = ["crossterm"] }
 regex = "1"
+lazy_static = "1.4.0"
+walkdir = "2.5.0"
